# oneit-dataset

./: .gitignore  README.md  category_crawling.ipynb  get_new_dataset.ipynb  product_crawling.ipynb  pyproject.toml  pyproject.toml.tmp  review_crawling.ipynb  thumbnail_crawling.ipynb  youtube_crawling.ipynb
crawling_func/: __init__.py  data_collector.py  normalized_category.py  preprocess.py  shop29cm_crawling.py  shopkko_crawling.py  shopmusinsa_crawling.py  youtube_crawling.py
docs/: check_category.ipynb  youtube_crawling.ipynb
src/data_collector/: category_normalize.py  data_collector.py  normalized_category.py  preprocess.py  shop29cm_crawling.py  shopkko_crawling.py  shopmusinsa_crawling.py  youtube_crawling.py
src/data_collector/data_crawler/: base_crawler.py  cm29_crawler.py  kkogift_crawler.py  musinsa_crawler.py
src/data_collector/generation/: description_generator.py  display_tags.py  recommend_tags.py  related_items.py  tagging.py
src/data_collector/get_source/: base_resource.py  youtube_resource.py
src/data_crawler/: base_crawler.py  cm29_crawler.py  kkogift_crawler.py  musinsa_crawler.py
src/data_uploader/: new_product_upload.py  test_connection.py
src/lambda_functions/lambda_test/src/: lambda_function.py
src/lambda_functions/productInfo_crawling/: lambda_function.py  productinfo_crawler.py
src/lambda_functions/productPrice_update/src/: get_category.py  lambda_function.py  preprocess.py  productprice_update.py
src/lambda_functions/productURL_verification/src/: lambda_function.py  producturl_verification.py
(+3 files in other folders)
