[tool.poetry]
name = "oneit-dataset"
version = "0.1.0"
description = "oneit data server environment"
authors = ["JSY <jsy98515@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
google-api-core = "^2.19.1"
mysql = "^0.0.3"
mysqlclient = "^2.2.4"
SQLAlchemy = "^2.0.31"
pandas = "^2.2.2"
selenium = "^4.23.1"
google-api-python-client = "^2.137.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
